--- a/style.css
+++ b/style.css
@@ -1,19 +1,47 @@
-h1 {
+.player1{
+    font-size: 30pt;
+    margin-top: 50pt;
+    margin-left: 30pt;
+    }
+    .rectangle1, .rectangle2, .rectangle3, .rectangle4, .rectangle5, .rectangle6 {
+    width: 160px;
+    height: 120px;
+    background-color: grey;
+    font-size: 90pt;
+    float: left;
+    margin: 10px;
     text-align: center;
-    font-weight: bolder;
-    color: indigo;
-    font-family:serif
+    line-height: 110px;
     }
-    h2 {
-    font-weight: bolder;
-    color: grey;
-    margin-top: 30pt;
+    .color1, .color2, .color3{
+    color: red;
     }
-    p {margin-top: 30pt
+    .player2{
+    margin-left: 30pt;
+    font-size: 30pt;
     }
-    .cite {
-    font-style: italic;
+    .rectangle7, .rectangle8, .rectangle10, .rectangle11, .rectangle12{
+    width: 160px;
+    height: 120px;
+    background-color: grey;
+    font-size: 90pt;
+    float: left;
+    margin: 10px;
+    text-align: center;
+    line-height: 110px;
+    }
+    .rectangle9{
+    width: 220px;
+    height: 120px;
+    background-color: grey;
+    font-size: 90pt;
+    float: left;
+    margin: 10px;
+    text-align: center;
+    line-height: 110px;
+    }
+    .color4, .color5, .color6{
+    color: red;
     
     
-    }
     
